<resources>
    <string name="app_name">Safegees</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_close_session">Close session</string>
    <string name="settings_map">Map</string>
    <string name="settings_data_transmission">Data transmission</string>
    <string name="more">MORE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- LATERAL MENU -->
    <string name="menu_profile">Profile</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_map">Map</string>
    <string name="menu_news">News</string>
    <string name="menu_info">Info</string>
    <string name="menu_add_people">Add people</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Ops. There was an error. Check the password, or the internet connection.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing publicEmail
        completions."
    </string>

    <string name="updating_data">Updating data</string>
    <!-- DELETE CONTACT -->
    <string name="delete_contact_title">Delete contact</string>
    <string name="delete_contact_advice_text">Are you sure you want to delete this contact?</string>
    <string name="delete_contact_accept_button">delete</string>
    <string name="delete_contact_cancel_button">cancel</string>

    <string name="snack_adding_contact">Adding contact</string>
    <!-- INVITATION MENU -->
    <string name="invitation_title">Invitation</string>
    <string name="invitation_text">You have received an invitation from:</string>
    <string name="invitation_accept">connect</string>
    <string name="invitation_cancel" >cancel</string>
    <string name="invitation_next" >next</string>

    <string name="appbar_map">show on map</string>
    <string name="appbar_email">send a email</string>
    <string name="appbar_phone">call by phone</string>
    <string name="appbar_delete">delete contact</string>

    //CONTACT PROFILE LAYOUT
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_topic">Message</string>
    <string name="profile_hint_name">your name</string>
    <string name="profile_hint_surname">your surname</string>
    <string name="profile_hint_email">your email</string>
    <string name="profile_hint_phone">your phone</string>
    <string name="profile_hint_topic">your public message</string>

    //SETINGS TEST
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to friend
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>


    <!-- PREFERENCES -->
    <string name="pref_wifi_connection">Wifi connection</string>
    <string name="pref_wifi_comment">Allows the wifi connection to download content (as maps). Recomended option.</string>
    <string name="pref_mobile_connection">Mobile connection (4g, 3g, ... )</string>
    <string name="pref_mobile_comment">Important: Using mobile connection online get the maps can consume too much of your internet fee.</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="pref_position_share">Send your position</string>
    <string name="pref_position_comment">This will share your position with your safegees friends</string>
    <string name="pref_external_pois">Add external map points</string>
    <string name="pref_external_pois_comment">Download and add external Points of Interest to be displayed in the map</string>



    <!-- INITIAL STATE -->
    <string name="splash_advice_unocmpresing">Uncompresing maps</string>
    <string name="splash_advice_download_info_hub">Download data from Crisis Info Hub</string>
    <string name="splash_advice_first_use_advice">"You must  be connected to internet before the first use"</string>
    <string name="splash_advice_initializing">Initializing</string>
    <string name="splash_advice_sharing_info">Sharing info with Safegees</string>

    //CONNECTION STRINGS/////////////////////////////////////////////////
    //POST keys
    <!-- Connection controller messages (get - post) -->
    <string name="KEY_CONTACTS_DATA" translatable="false">friends</string>
    <string name="KEY_AUTHORIZED" translatable="false">authorized</string>
    <string name="KEY_USER_BASIC" translatable="false">user</string>
    <string name="KEY_USER_IMAGES_TO_UPLOAD" translatable="false">user_images_to_upload</string>
    <string name="KEY_POINTS_OF_INTEREST" translatable="false">organitations</string>
    <string name="KEY_IS_LOGED" translatable="false">isLoged</string>
    <string name="KEY_USER_MAIL" translatable="false">user_mail</string>
    <string name="KEY_USER_PASSWORD" translatable="false">user_password</string>
    <string name="KEY_APP_USERS" translatable="false">app_users</string>
    <string name="KEY_ADD_USERS" translatable="false">add_users</string>
    <string name="KEY_DELETE_USERS" translatable="false">delete_users</string>
    <string name="KEY_USER_POSITIONS" translatable="false">user_position</string>
    <string name="KEY_USER_BASIC_DATA" translatable="false">user_basic_data</string>
    <string name="KEY_INFO_WEB" translatable="false">info_web</string>
    //MAP
    <string name="MAP_LAST_LAT" translatable="false">LAST_LAT</string>
    <string name="MAP_LAST_LON" translatable="false">LAST_LON</string>
    <string name="MAP_LAST_ZOOM" translatable="false">LAST_ZOOM</string>
    /////////////////////////////////////////////////
</resources>
