<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- "Mark Favorite", should appear as action button if possible -->

        <item
            android:id="@+id/menu_show_on_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/appbar_map"
            android:titleCondensed="@string/appbar_map"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_call"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/appbar_phone"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_email"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/appbar_email"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_delete_contact"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/appbar_delete"
            app:showAsAction="ifRoom"/>

        <!-- Settings, should always be in the overflow -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:visible="false"/>

</menu>