<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.view.PrincipalMapActivity"
    android:background="@color/colorPrimaryBright"
    android:clickable="true">


        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/result"
            android:layout_margin="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_user_rounded"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="pickImage"
            android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="setProfileField"
                android:tag="topic">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_topic"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
                <TextView
                    android:id="@+id/editTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_topic"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryExtraDark"
                    android:onClick="setProfileField"
                    android:tag="topic"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="setProfileField"
                android:tag="name">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textDirection="locale"
                    android:textAlignment="gravity"
                    />
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/profile_hint_name"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryExtraDark"
                    android:onClick="setProfileField"
                    android:tag="name"
                    android:textDirection="locale"
                    android:textAlignment="gravity"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="setProfileField"
                android:tag="surname">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_surname"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
                <EditText
                    android:id="@+id/editSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/profile_hint_surname"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryExtraDark"
                    android:onClick="setProfileField"
                    android:tag="surname"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="setProfileField"
                android:tag="publicEmail">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_email"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/profile_hint_surname"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryExtraDark"
                    android:onClick="setProfileField"
                    android:tag="publicEmail"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="setProfileField"
                android:tag="phone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/profile_hint_surname"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryExtraDark"
                    android:onClick="setProfileField"
                    android:tag="phone"
                    android:textDirection="locale"
                    android:textAlignment="gravity" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginTop="5dp" />





        </LinearLayout>


    </ScrollView>

</FrameLayout>
