<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.safegees.safegees.gui.fragment.ProfileUserFragment"
    android:background="@color/colorPrimaryBright">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/contact_left"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_chevron_left_black_24dp"
                android:backgroundTint="@color/colorCadaques"
                android:tint="@color/colorCadaques">
            </ImageView>
            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/result"
                        android:layout_margin="20dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/default_user_rounded"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/editTopic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:text="your public message"
                            android:selectAllOnFocus="false"
                            android:singleLine="false"
                            android:focusable="false"
                            android:background="@drawable/text_view_border"
                            android:textColor="@color/colorCadaquesAccentExtraDark"
                            android:padding="@dimen/fab_margin"
                            android:tag="topic"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            />

                    <LinearLayout
                        android:id="@+id/lay_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="name"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_name"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorCadaquesAccentDark"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            />
                        <EditText
                            android:id="@+id/editName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="your name"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:focusable="false"
                            android:inputType="none|textNoSuggestions"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimaryExtraDark"
                            android:tag="name"
                            android:textDirection="locale"
                            android:textAlignment="gravity"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lay_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="surname"
                        android:layout_marginTop="10dp"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_surname"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorCadaquesAccentDark"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            />
                        <EditText
                            android:inputType="none|textNoSuggestions"
                            android:id="@+id/editSurname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="your surname"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:focusable="false"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimaryExtraDark"
                            android:tag="surname"
                            android:textDirection="locale"
                            android:textAlignment="gravity"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lay_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="publicEmail"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_email"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorCadaquesAccentDark"
                            android:textDirection="locale"
                            android:textAlignment="gravity"/>
                        <EditText
                            android:inputType="none|textNoSuggestions"
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="your email"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:focusable="false"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimaryExtraDark"
                            android:tag="publicEmail"
                            android:textDirection="locale"
                            android:textAlignment="gravity"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lay_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="phone"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_phone"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorCadaquesAccentDark"
                            android:textDirection="locale"
                            android:textAlignment="gravity"
                            />
                        <EditText
                            android:inputType="none|textNoSuggestions"
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="your phone"
                            android:selectAllOnFocus="false"
                            android:singleLine="true"
                            android:focusable="false"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimaryExtraDark"
                            android:tag="phone"
                            android:textDirection="locale"
                            android:textAlignment="gravity"/>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
            <ImageView
                android:id="@+id/contact_right"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_chevron_right_black_24dp"
                android:backgroundTint="@color/colorCadaques"
                android:tint="@color/colorCadaques">
                </ImageView>
        </LinearLayout>
</FrameLayout>
